--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -39,6 +39,7 @@ jobs:
           --client-id "$Env:AZURE_CLIENT_ID" `
           --federated-credential-provider "github" `
           --tenant-id "$Env:AZURE_TENANT_ID"
+      shell: pwsh
           
     - name: Provision Infrastructure
       run: azd provision --no-prompt
