Update azure-swa-deploy.yml to specify demo environment for infrastructure provisioning

--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -42,7 +42,7 @@ jobs:
       shell: pwsh
           
     - name: Provision Infrastructure
-      run: azd provision --no-prompt
+      run: azd provision --environment demo --no-prompt
       env:
           AZD_INITIAL_ENVIRONMENT_CONFIG: ${{ secrets.AZD_INITIAL_ENVIRONMENT_CONFIG }}
     
