--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -48,4 +48,7 @@ jobs:
       run: azd provision --environment demo --no-prompt
       env:
           AZD_INITIAL_ENVIRONMENT_CONFIG: ${{ secrets.AZD_INITIAL_ENVIRONMENT_CONFIG }}
+
+    - name: Deploy Application
+      run: azd deploy --no-prompt
     
