--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -45,21 +45,16 @@ jobs:
       shell: pwsh
           
     - name: Provision Infrastructure
-      run: azd provision --environment demo --no-prompt
+      run: azd provision --no-prompt
       env:
-          AZD_INITIAL_ENVIRONMENT_CONFIG: ${{ secrets.AZD_INITIAL_ENVIRONMENT_CONFIG }}
+        AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
+        AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
+        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-    - name: 'SWA: cli install'
-      run: npm install -g @azure/static-web-apps-cli
-
-    - name: 'NPM: Build'
-      run: |
-        rm -rf node_modules
-        rm -rf package-lock.json
-        npm install react-scripts
-        npm install --no-fund
-        npm run build
-      
     - name: Deploy Application
-      run: swa deploy --resource-group rg-demo --app-name swa-yoyfbhsvbtasm --env Production
+      run: azd deploy --no-prompt
+      env:
+        AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
+        AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
+        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
     
