--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -45,7 +45,7 @@ jobs:
       shell: pwsh
           
     - name: Provision Infrastructure
-      run: azd provision --no-prompt
+      run: azd provision --no-state --no-prompt
       env:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
