--- a/azure.yaml
+++ b/azure.yaml
@@ -5,11 +5,6 @@ metadata:
   template: art-gallery-chat-app@0.0.1-beta
 services:
   web:
-    project: ./src
-    dist: build
-    language: js
-    host: staticwebapp
-  api:
-    project: ./api
+    project: ./
     language: js
     host: staticwebapp
