--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -39,12 +39,16 @@ jobs:
       run: azd config set auth.useAzCliAuth "true"
 
     - name: Provision Infrastructure
+      id: deploy_bicep
       run: azd provision --no-state --no-prompt
       env:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
+        
+    - name: "echo"
+      run: echo "Storage Account Name: ${{ steps.deploy_bicep.outputs.staticWebAppName }}"
+      
     - name: 'NPM: Build'
       run: |
         rm -rf node_modules
@@ -57,4 +61,4 @@ jobs:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
+        STATIC_WEB_APP_NAME: ${{ steps.deploy_bicep.outputs.staticWebAppName }}"
