--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -42,14 +42,10 @@ jobs:
       id: deploy_bicep
       run: |
         azd provision --no-state --no-prompt
-        echo "::set-output name=staticWebAppName::$(jq -r '.properties.outputs.staticWebAppName.value' output.json)
       env:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        
-    - name: "echo"
-      run: echo ${{ steps.deploy_bicep.outputs.staticWebAppName }}
       
     - name: 'NPM: Build'
       run: |
@@ -63,4 +59,4 @@ jobs:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        STATIC_WEB_APP_NAME: ${{ steps.deploy_bicep.outputs.staticWebAppName }}"
+        STATIC_WEB_APP_NAME: ${{ variables.staticWebAppName }}
