--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -46,6 +46,11 @@ jobs:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    - name: 'NPM: Build'
+      run: |
+        rm -rf node_modules
+        rm -rf package-lock.json
         
     - name: Deploy Application
       run: azd deploy --no-prompt
