--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -61,7 +61,7 @@ jobs:
         ELASTIC_COMPLETION_MODEL_ID: ${{ vars.ELASTIC_COMPLETION_MODEL_ID }}
         ELASTIC_INFERENCE_PIPELINE_MODEL_ID: ${{ vars.ELASTIC_INFERENCE_PIPELINE_MODEL_ID }}
         AZURE_EMBEDDING_API_VERSION: ${{ vars.AZURE_EMBEDDING_API_VERSION }}
-        AZURE_COMPLETION_API_VERSION: ${{ vars.AZURE_COMPLETION_API_VERSION }}
+        # AZURE_COMPLETION_API_VERSION: ${{ vars.AZURE_COMPLETION_API_VERSION }}
 
     - name: 'NPM: Build'
       run: |
