Update environment variable references in azure-swa-deploy.yml for consistency

--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -55,13 +55,13 @@ jobs:
         AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
         AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        ELASTIC_SEARCH_INDEX: ${{ vars.ELASTIC_SEARCH_INDEX }}
-        ELASTIC_VECTOR_FIELD: ${{ vars.ELASTIC_VECTOR_FIELD }}
-        ELASTIC_EMBEDDING_MODEL_ID: ${{ vars.ELASTIC_EMBEDDING_MODEL_ID }}
-        ELASTIC_COMPLETION_MODEL_ID: ${{ vars.ELASTIC_COMPLETION_MODEL_ID }}
-        ELASTIC_INFERENCE_PIPELINE_MODEL_ID: ${{ vars.ELASTIC_INFERENCE_PIPELINE_MODEL_ID }}
-        AZURE_EMBEDDING_API_VERSION: ${{ vars.AZURE_EMBEDDING_API_VERSION }}
-        # AZURE_COMPLETION_API_VERSION: ${{ vars.AZURE_COMPLETION_API_VERSION }}
+        ELASTIC_SEARCH_INDEX: ${{ env.ELASTIC_SEARCH_INDEX }}
+        ELASTIC_VECTOR_FIELD: ${{ env.ELASTIC_VECTOR_FIELD }}
+        ELASTIC_EMBEDDING_MODEL_ID: ${{ env.ELASTIC_EMBEDDING_MODEL_ID }}
+        ELASTIC_COMPLETION_MODEL_ID: ${{ env.ELASTIC_COMPLETION_MODEL_ID }}
+        ELASTIC_INFERENCE_PIPELINE_MODEL_ID: ${{ env.ELASTIC_INFERENCE_PIPELINE_MODEL_ID }}
+        AZURE_EMBEDDING_API_VERSION: ${{ env.AZURE_EMBEDDING_API_VERSION }}
+        AZURE_COMPLETION_API_VERSION: ${{ env.AZURE_COMPLETION_API_VERSION }}
 
     - name: 'NPM: Build'
       run: |
