Add new parameters for Elastic and Azure configurations in deployment files

--- a/.github/workflows/azure-swa-deploy.yml
+++ b/.github/workflows/azure-swa-deploy.yml
@@ -62,6 +62,16 @@ jobs:
         ELASTIC_INFERENCE_PIPELINE_MODEL_ID: ${{ env.ELASTIC_INFERENCE_PIPELINE_MODEL_ID }}
         AZURE_EMBEDDING_API_VERSION: ${{ env.AZURE_EMBEDDING_API_VERSION }}
         AZURE_COMPLETION_API_VERSION: ${{ env.AZURE_COMPLETION_API_VERSION }}
+        ELASTIC_CLUSTER: ${{ secrets.ELASTIC_CLUSTER }}
+        ELASTIC_API_KEY: ${{ secrets.ELASTIC_API_KEY }}
+        ENDPOINT_BASE: ${{ secrets.ENDPOINT_BASE }}
+        ENDPOINT: ${{ secrets.ENDPOINT }}
+        AZURE_API_KEY: ${{ secrets.AZURE_API_KEY }}
+        AZURE_EMBEDDING_RESOURCE_NAME: ${{ secrets.AZURE_EMBEDDING_RESOURCE_NAME }}
+        AZURE_EMBEDDING_DEPLOYMENT_ID: ${{ secrets.AZURE_EMBEDDING_DEPLOYMENT_ID }}
+        AZURE_COMPLETION_RESOURCE_NAME: ${{ secrets.AZURE_COMPLETION_RESOURCE_NAME }}
+        AZURE_COMPLETION_DEPLOYMENT_ID: ${{ secrets.AZURE_COMPLETION_DEPLOYMENT_ID }}
+        ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
 
     - name: 'NPM: Build'
       run: |
