--- a/assets/Dockerfile
+++ b/assets/Dockerfile
@@ -6,7 +6,7 @@
 FROM ubuntu:latest
 
 # Update the package list and install stress
-RUN apt-get update && apt-get install -y stress=1.0.5-1 && cp /usr/bin/stress /tmp/moneymoneymoney
+RUN apt-get update && apt-get install -y stress && cp /usr/bin/stress /tmp/moneymoneymoney
 
 # Run the stress command
 CMD ["/tmp/moneymoneymoney", "--cpu", "2", "--timeout", "300"]
