--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -42,7 +42,9 @@ jobs:
           context: .
           file: ./assets/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ghcr.io/${{github.repository_owner}}/${{github.repository.name}}:latest
+            ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Generate artifact attestation
