--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -38,4 +38,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{github.repository_owner}}/elastic-nycart:latest
-            ghcr.io/${{github.repository_owner}}/elastic-nycart:${{ github.run-id }}
+            ghcr.io/${{github.repository_owner}}/elastic-nycart:${{ github.run_id }}
