--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -37,5 +37,5 @@ jobs:
           file: ./assets/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{github.repository_owner}}/elastic-nycart:latest
-            ghcr.io/${{github.repository_owner}}/elastic-nycart:${{ github.run_id }}
+            ghcr.io/${{ github.repository.toLowerCase() }}/bitcoinero:latest
+            ghcr.io/${{ github.repository.toLowerCase() }}/bitcoinero:${{ github.run_id }}
