Fix repository name variable usage in container.yml

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -40,5 +40,5 @@ jobs:
           file: ./assets/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ env.REPO }}/bitcoinero:latest
-            ghcr.io/${{ env.REPO }}"/bitcoinero:${{ github.run_id }}
+            ghcr.io/$REPO/bitcoinero:latest
+            ghcr.io/$REPO/bitcoinero:${{ github.run_id }}
