Update container.yml to use hardcoded repository path in image tags

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -40,5 +40,5 @@ jobs:
           file: ./assets/Dockerfile
           push: true
           tags: |
-            ghcr.io/$REPO/bitcoinero:latest
-            ghcr.io/$REPO/bitcoinero:${{ github.run_id }}
+            ghcr.io/erleonard/{repo}/bitcoinero:latest
+            ghcr.io/erleonard/{repo}/bitcoinero:${{ github.run_id }}
