--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Set repository name to lowercase
-        run: echo "REPO=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
+      - name: Lowercase repository name
+        id: lowercase
+        run: echo "repository=${GITHUB_REPOSITORY@L}" >> $GITHUB_OUTPUT
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -40,5 +41,5 @@ jobs:
           file: ./assets/Dockerfile
           push: true
           tags: |
-            ghcr.io/erleonard/{repo}/bitcoinero:latest
+            ghcr.io/${{ steps.lowercase.outputs.repository }}/bitcoinero:latest
             ghcr.io/erleonard/{repo}/bitcoinero:${{ github.run_id }}
